# prisma

./: .clangd  .gitignore  CMakeLists.txt  README.md  flake.nix
bench/: CMakeLists.txt  bench_bmp.cpp  bench_png.cpp  bench_wav.cpp  utils.hpp
include/prisma/: cli.hpp  command.hpp  commands.hpp  file.hpp  format.hpp  parser.hpp
include/prisma/codecs/audio/: wav.hpp
include/prisma/codecs/image/: bmp.hpp  png.hpp
include/prisma/codecs/image/bmp/: bmp.hpp
include/prisma/codecs/image/png/: png.hpp
include/prisma/commands/: convert.hpp  info.hpp  render.hpp
include/prisma/core/: audio.hpp  image.hpp
include/prisma/formats/: bmp.hpp  png.hpp
include/prisma/formats/bmp/: bmp.hpp
include/prisma/formats/png/: png.hpp
include/prisma/formats/raw/: raw.hpp
include/prisma/process/: bmp.hpp
src/: cli.cpp  command.cpp  file.cpp  format.cpp  main.cpp  parser.cpp
src/codecs/audio/: wav.cpp
src/codecs/audio/wav/: wav.cpp
src/codecs/image/: bmp.cpp  png.cpp
src/codecs/image/bmp/: bmp.cpp
src/codecs/image/png/: png.cpp
src/commands/: convert.cpp  info.cpp  render.cpp
src/core/: audio.cpp  image.cpp
src/formats/bmp/: bmp.cpp
src/formats/png/: png.cpp
src/formats/raw/: raw.cpp
